# build

./: .gitignore  README.md  __init__.py  _create_release.py  _create_testsetup.py  build.py  build_tools.py  build_user_file.py  clion.py  cmake.py  commons.py  conan.py  log.py  ninja.py  package_manager.py  projgen.py  requirements.txt  setup.py  tests.py  vcpkg.py
build_tools/: __init__.py  clion.py  cmake.py  commons.py  conan.py  config.py  log.py  ninja.py  vcpkg.py  vcvarsall.py
build_tools/projgen_files/: CMakeLists.txt  assembly.nasm  vcpkg.json
projgen_files/: CMakeLists.txt  CMakeLists.txt.jinja2  assembly.nasm  build.bat  build.bat.jinja2  build.py  build.py.jinja2  build.sh  build.sh.jinja2  clion_workspace.xml  commons.jinja2  conanfile.txt  main.cpp  vcpkg.json
